// Vitest Snapshot v1

exports[`mounts component 1`] = `
<div>
  <details
    class="mt-8 cursor-pointer text-axo-orange text-xl"
  >
    <summary
      class=""
    >
      add a note for this library
    </summary>
    <div
      class="mt-8 w-4/5 bg-slate-800 border-t border-t-slate-600 flex justify-between gap-4 text-slate-50 px-4 pb-6 pt-2 text-xs"
    >
      <div
        class="w-full"
      >
        <label
          class="sr-only"
          for="comment"
        >
          add a note for this library
        </label>
        <div
          class="flex gap-4 items-end"
        >
          <textarea
            class="bg-transparent outline-none border-0 w-full p-4 border-b-axo-orange border-b active:border-b-axo-pink focus:border-b-axo-pink focus:border-b-2 focus:outline-none focus:ring-0 placeholder:text-slate-400"
            id="comment"
            name="comment"
            placeholder="add note"
            rows="1"
          />
          <button
            class="min-w-max bg-axo-orange text-xl hover:bg-axo-pink px-4 py-2 rounded-md"
          >
            +
          </button>
        </div>
      </div>
    </div>
  </details>
</div>
`;

exports[`mounts component with default note 1`] = `
<div>
  <details
    class="mt-8 cursor-pointer text-axo-orange text-xl"
  >
    <summary
      class=""
    >
      update note for this library
    </summary>
    <div
      class="mt-8 w-4/5 bg-slate-800 border-t border-t-slate-600 flex justify-between gap-4 text-slate-50 px-4 pb-6 pt-2 text-xs"
    >
      <div
        class="w-full"
      >
        <label
          class="sr-only"
          for="comment"
        >
          update note for this library
        </label>
        <div
          class="flex gap-4 items-end"
        >
          <textarea
            class="bg-transparent outline-none border-0 w-full p-4 border-b-axo-orange border-b active:border-b-axo-pink focus:border-b-axo-pink focus:border-b-2 focus:outline-none focus:ring-0 placeholder:text-slate-400"
            id="comment"
            name="comment"
            placeholder="add note"
            rows="1"
          />
          <button
            class="min-w-max bg-axo-orange text-xl hover:bg-axo-pink px-4 py-2 rounded-md"
          >
            +
          </button>
        </div>
      </div>
    </div>
  </details>
</div>
`;
